--- a/css/about.css
+++ b/css/about.css
@@ -203,9 +203,14 @@ ul,ol,li,a,a:hover,a:focus,a:active,div{
 .ab-content{
 	padding: 0 20%;
 }
+/*.onload{
+	width: 100%;
+	height: 100%;
+}*/
 .ab-content>p{
 	text-align: center;
 	color: #424242;
+	padding: 6px 0;
 }
 .ab-content>p:nth-of-type(1){
 	font-size: 18px;
