--- a/css/about.css
+++ b/css/about.css
@@ -14,27 +14,80 @@ ul,ol,li,a,a:hover,a:focus,a:active,div{
 }
 .wrap{
 	position: relative;
+	left: 0;
+	-webkit-transition: all .3s ease;
+	-moz-transition: all .3s ease;
+	-ms-transition: all .3s ease;
+	-o-transition: all .3s ease;
+	transition: all .3s ease;
+}
+.remove{
 	width: 100%;
-	/*float: right;*/
 	left: 266px;
+	-webkit-transition: all .3s ease;
+	-moz-transition: all .3s ease;
+	-ms-transition: all .3s ease;
+	-o-transition: all .3s ease;
+	transition: all .3s ease;
 }
 /*me-info start*/
+.open-me{
+	opacity: 1!important;
+	left: 0!important;
+}
 .me-info{
 	position: fixed;
-	left: 0;
+	left: -100%;
 	top: 0;
 	width: 266px;
 	height: 100%;
-	background: red;
-	padding: 10px;
+	background: #000;
+	color: #fff;
+	padding: 30px 10px;
 	box-sizing:border-box;
+	-webkit-transition: all .3s ease;
+	-moz-transition: all .3s ease;
+	-ms-transition: all .3s ease;
+	-o-transition: all .3s ease;
+	transition: all .3s ease;
+	opacity: 0;
+}
+.me-info>.me>img{
+	width: 60%;
+	/*transform: scale(1.4);*/
+	display: block;
+	margin: 0 auto;
+	border-radius: 50%;
+	box-shadow: 0 0 15px #f9e249;
 }
 .close{
 	position: absolute;
 	top: 10px;
 	right: 10px;
-	color: #fff;
+	color: #d6d6d6;
 	font-size: 20px;
+	cursor: pointer;
+}
+.main{
+	position: relative;
+}
+.main-bg{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	opacity: .8;
+	background: #fff;
+	z-index: 999;
+	display: none;
+	-ms-filter: "alpha(opacity=80)";
+    filter: alpha(opacity=80);
+    -webkit-transition: .01s opacity ease .2s;
+    -moz-transition: .01s opacity ease .2s;
+    -o-transition: .01s opacity ease .2s;
+    -ms-transition: .01s opacity ease .2s;
+    transition: .01s opacity ease .2s;
 }
 /*navbar start*/
 #header-wrap{
@@ -116,7 +169,28 @@ ul,ol,li,a,a:hover,a:focus,a:active,div{
 	text-align: right;
 }
 .nav-wrap{
-	text-align: right;
+	width: 100%;
+	height: 32px;
+	position: relative;
+	overflow: hidden;
+}
+.nav-wrap>nav{
+	width: 100%;
+	height: 100%;
+	float: right;
+}
+.head-me{
+	float: right;
+    height: 32px;
+    display: block;
+    padding: 4px 0;
+    box-sizing:border-box;
+    cursor: pointer;
+}
+.head-me>img{
+	display: block;
+	height: 24px;
+	line-height: 32px;
 }
 .nav-wrap>nav>ul{
 	display: table;
@@ -144,6 +218,9 @@ ul,ol,li,a,a:hover,a:focus,a:active,div{
 	font-size: 20px;
 	position: absolute;
 	top: -2px;
+}
+.navActive{
+	color: #b4b4b4!important;
 }
 /*navbar end*/
 #writing{
@@ -347,6 +424,7 @@ ul,ol,li,a,a:hover,a:focus,a:active,div{
 	width: 25%;
 	padding: 1%;
 	box-sizing:border-box;
+
 }
 .wr-img{
 	width: 100%;	
@@ -395,6 +473,26 @@ ul,ol,li,a,a:hover,a:focus,a:active,div{
 	display: table-cell;
 	text-align: center;
 	width: 25%;
+
+	-webkit-animation-name: entrance;
+	-moz-animation-name: entrance;
+	-o-animation-name: entrance;
+	animation-name: entrance;
+	-webkit-animation-duration: 1.6s;
+	-moz-animation-duration: 1.6s;
+	-ms-animation-duration: 1.6s;
+	-o-animation-duration: 1.6s;
+	animation-duration: 1.6s;
+	opacity: 1 !important;
+
+	-webkit-animation-fill-mode: both;
+	-moz-animation-fill-mode: both;
+	-ms-animation-fill-mode: both;
+	-o-animation-fill-mode: both;
+	animation-fill-mode: both;
+	-webkit-animation-delay: .3s;
+	-moz-animation-delay: .3s;
+	animation-delay: .3s;
 }
 .co-content>ul>li>a{
 	opacity: .4;
@@ -439,6 +537,37 @@ footer{
 	    -o-transform: translate3d(-1200px,0,0);
 	    -ms-transform: translate3d(-1200px,0,0);
 	    transform: translate3d(-1200px,0,0);
+	}
+}
+@keyframes entrance{
+	0% {
+	    transform: scale(0.3) rotate(6deg) translateX(-30%) translateY(30%);
+	    opacity: .2;
+	}
+	30% {
+	    transform: scale(1.03) rotate(-2deg) translateX(2%) translateY(-2%);
+	    opacity: 1;
+	}
+	45% {
+	    transform: scale(0.98) rotate(1deg) translateX(0%) translateY(0%);
+	    opacity: 1;
+	}
+	60% {
+	    transform: scale(1.01) rotate(-1deg) translateX(0%) translateY(0%);
+	    opacity: 1;
+	}
+	75% {
+	    transform: scale(0.99) rotate(1deg) translateX(0%) translateY(0%);
+	    opacity: 1;
+	}
+	90% {
+	    transform: scale(1.01) rotate(0deg) translateX(0%) translateY(0%);
+	    opacity: 1;
+	}
+
+	100% {
+	    transform: scale(1) rotate(0deg) translateX(0%) translateY(0%);
+	    opacity: 1;
 	}
 }
 
