--- a/css/about.css
+++ b/css/about.css
@@ -62,13 +62,34 @@ ul,ol,li,a,a:hover,a:focus,a:active,div{
 	transition: all .3s ease;
 	opacity: 0;
 }
-.me-info>.me>img{
-	width: 60%;
-	/*transform: scale(1.4);*/
+.me-info>.me>.me-pic{
+	width: 160px;
+	height: 160px;
 	display: block;
 	margin: 0 auto;
+	overflow: hidden;
 	border-radius: 50%;
 	box-shadow: 0 0 15px #f9e249;
+	
+}
+.me-pic .me-wrap{
+	width: 160px;
+	height: 160px;
+	display: block;
+	transition: .5s;
+	overflow: hidden;
+	border-radius: 50%;
+	position: relative;
+	z-index: 1;
+}
+.me-pic .me-wrap img{
+	width: 100%;
+	height: 100%;
+}
+.me-pic .me-wrap:hover{
+	transform: scale(2.0);
+	border-radius: 50%;
+	z-index: -1;
 }
 .me-info>.me>h3{
 	font-size: 18px;
@@ -418,6 +439,7 @@ ul,ol,li,a,a:hover,a:focus,a:active,div{
 .sk-co-title>p{
 	font-style: italic;
 	color: #ccc;
+	margin: 10px 0 20px 0;
 }
 .sk-list{
 	width: 100%;
