--- a/css/about.css
+++ b/css/about.css
@@ -67,7 +67,7 @@ ul,ol,li,a,a:hover,a:focus,a:active,div{
 	height: 160px;
 	display: block;
 	margin: 0 auto;
-	overflow: hidden;
+	/*overflow: hidden;*/
 	border-radius: 50%;
 	box-shadow: 0 0 15px #f9e249;
 	
@@ -76,20 +76,20 @@ ul,ol,li,a,a:hover,a:focus,a:active,div{
 	width: 160px;
 	height: 160px;
 	display: block;
-	transition: .5s;
 	overflow: hidden;
 	border-radius: 50%;
 	position: relative;
 	z-index: 1;
 }
+.me-pic .me-wrap img:hover{
+	transform: scale(2);
+	transition: .5s;
+}
 .me-pic .me-wrap img{
 	width: 100%;
 	height: 100%;
-}
-.me-pic .me-wrap:hover{
-	transform: scale(2.0);
 	border-radius: 50%;
-	z-index: -1;
+	transition: .5s;
 }
 .me-info>.me>h3{
 	font-size: 18px;
