--- a/css/about.css
+++ b/css/about.css
@@ -482,7 +482,25 @@ ul,ol,li,a,a:hover,a:focus,a:active,div{
 	width: 25%;
 	padding: 1%;
 	box-sizing:border-box;
-
+	position: relative;
+	left: 10px;
+	top: 20px;
+	opacity: 0;
+	-webkit-transition: all 0.4s ease-in;
+    -moz-transition: all 0.4s ease-in;
+    -ms-transition: all 0.4s ease-in;
+    -o-transition: all 0.4s ease-in;
+    transition: all 0.4s ease-in;
+}
+.wr-content>ul>li.fade{
+	top: 0;
+	left: 0;
+	opacity: 1;
+	-webkit-transition: all 0.4s ease-in;
+    -moz-transition: all 0.4s ease-in;
+    -ms-transition: all 0.4s ease-in;
+    -o-transition: all 0.4s ease-in;
+    transition: all 0.4s ease-in;
 }
 .wr-img{
 	width: 100%;	
@@ -510,14 +528,15 @@ ul,ol,li,a,a:hover,a:focus,a:active,div{
 }
 .w-txt{
 	position: absolute;
-	bottom: 0;
+	top: 100%;
 	left: 0;
 	width: 100%;
 	height: 100%;
 	color: #fff;
-	padding: 10px;
+	/*padding: 10px;*/
 	box-sizing:border-box;
-	background: rgba(0,0,0,0.8);
+	background: #10090b;
+	opacity: .8;
     -webkit-transition: all 0.2s ease-in;
     -moz-transition: all 0.2s ease-in;
     -ms-transition: all 0.2s ease-in;
@@ -526,14 +545,44 @@ ul,ol,li,a,a:hover,a:focus,a:active,div{
 	
 }
 .w-txt>h3{
-	margin-bottom: 4%;
-	margin-top: 2%;
-	font-size: 18px;
-	font-weight: normal;
+	position: relative;
+	top: -44px;
+	/*z-index: 10;*/
+	font-family: '微软雅黑';
+	font-size: 16px;
+	letter-spacing: 1px;
+	padding-top: 16px;
+	padding-bottom: 12px;
 	text-align: center;
+	/*background: #10090b;*/
+	opacity: .8; 
+	color: #fff;
+	background: url(../images/sj.gif);
+	background-repeat: repeat-x;
 }
 .w-txt>p{
 	line-height: 1.6;
+	padding: 0 20px;
+}
+.w-link:hover .w-txt{
+	top: 0;
+	background: (0,0,0,.8);
+}
+.w-link:hover .w-txt>h3{
+	top: 0;
+	padding-top: 30px;
+}
+.w-link:hover .wr-img>img{
+	-webkit-transform: scale(1.4);
+    -moz-transform: scale(1.4);
+    -ms-transform: scale(1.4);
+    -o-transform: scale(1.4);
+    transform: scale(1.4);
+    -webkit-transition: all 0.2s ease-in;
+    -moz-transition: all 0.2s ease-in;
+    -ms-transition: all 0.2s ease-in;
+    -o-transition: all 0.2s ease-in;
+    transition: all 0.2s ease-in;
 }
 /*.wr-content>ul>li p{
 	padding: 10px 0;
@@ -543,12 +592,7 @@ ul,ol,li,a,a:hover,a:focus,a:active,div{
 	background-repeat: repeat-x;
 	background-color: #fff;
 }
-*/.one{
-	width: 100%;
-	border: 1px solid #ddd;
-	border-bottom: 0;
-	background: #fff;
-}
+*/
 .co-content{
 	padding: 10px;
 	text-align: center;
@@ -619,8 +663,20 @@ footer{
 .wrap-bottom p{
 	padding: 15px 0;
 }
-
-
+.chicken{
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100%;
+}
+.chicken>img{
+	height: 100%;
+	transform: rotateY(180deg);
+	-webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    -ms-transform: rotateY(180deg);
+    -o-transform: rotateY(180deg);
+}
 
 
 @keyframes bg{
