--- a/css/about.css
+++ b/css/about.css
@@ -454,6 +454,9 @@ ul,ol,li,a,a:hover,a:focus,a:active,div{
 	font-size: 16px;
 }
 /*foot start*/
+.foot-content{
+	padding:0 20px;
+}
 .event_wrap{
 	overflow: hidden;
 }
