--- a/css/about.css
+++ b/css/about.css
@@ -183,6 +183,7 @@ ul,ol,li,a,a:hover,a:focus,a:active,div{
 	padding: 5px 0;
 	background: #000;
 	color: #fff;
+	position: relative;
 }
 .bar-wrap{
 	width: 90%;
@@ -409,7 +410,7 @@ ul,ol,li,a,a:hover,a:focus,a:active,div{
 	position: absolute;
 	top: 0;
 	left: 0;
-	content: '111';
+	content: '';
 	display: block;
 	width: 100%;
 	height: 100%;
@@ -737,4 +738,52 @@ footer{
 	}
 }
 
-
+@media screen and (max-width: 600px){
+	p{
+		line-height: 1.6!important;		
+	}
+	.info-wrap{
+		background-size: cover;
+	}
+	.se-title>h2{
+		letter-spacing: .1rem;
+	}
+	.se-title>span{
+		width: 20%;
+	}
+	.ab-content>p{		
+		padding: 0;
+	}
+	#header-wrap{
+		position: relative;
+	}
+	.wrap-me{
+		width: 150px;
+		height: 150px;	
+	}
+	.wrap-me>img{
+		width: 150px;
+		height: 150px;
+	}
+	.sk-content>ul>li{
+		display: block;
+		width: 100%;
+	}
+	.wr-content>ul,.co-content>ul{
+		display: flex;
+		width: 100%;
+		flex-flow: row wrap;
+		align-content: flex-start;
+	}
+	.wr-content>ul>li,.co-content>ul>li{
+		flex: 0 0 50%;
+		padding: 3%;
+		display: block;
+	}
+	.co-content>ul>li{
+		padding: 3% 0;
+	}
+	.w-txt>h3{
+		font-size: .8rem;
+	}
+}
