--- a/css/about.css
+++ b/css/about.css
@@ -22,6 +22,41 @@ ul,ol,li,a,a:hover,a:focus,a:active,div{
 	-o-transition: all 2 ease;
 	transition: all 2 ease;*/
 }
+.loading #header-wrap{
+	top: 0;
+	background: #ffcf05 url(../images/top_bg.png) repeat-x left bottom;
+	height: 100%;
+	-webkit-transition: height ease 1.5s;
+	-moz-transition: height ease 1.5s;
+	transition: height ease 1.5s;
+}
+.loading .main{
+	opacity: 0;
+}
+.loading_bar{
+	display: none;
+}
+.loading .loading_bar{
+	opacity: 1;
+	position: absolute;
+	width: 415px;
+	height: 39px;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	margin: auto;
+	background: url(../images/loading_bar.png) no-repeat left top;
+}
+.loading .loading_bar>img{
+	display: block;
+	position: relative;
+	top: 2px;
+	left: 2px;
+	-webkit-transition: width ease .5s;
+	-moz-transition: width ease .5s;
+	transition: width ease .5s;
+}
 .wrap{
 	position: relative;
 	left: 0;
@@ -524,7 +559,7 @@ ul,ol,li,a,a:hover,a:focus,a:active,div{
 	display: block;
 	width: 100%;
 	height: 100%;
-	box-shadow: 4px 4px 4px #ccc;
+	box-shadow: 2px 2px 2px #959595,4px 4px 2px #959595;
 	position: relative;
 	overflow: hidden;
 }
@@ -742,7 +777,7 @@ footer{
 	}
 }
 
-@media screen and (max-width: 600px){
+@media screen and (max-width: 890px){
 	p{
 		line-height: 1.6!important;		
 	}
@@ -820,5 +855,14 @@ footer{
 		height: 100%;
 		padding: 6px;
 		box-sizing: border-box;
+	}
+	.info-wrap{
+		height: 148px;
+	}
+	.info-img{
+		padding-top: 10px;
+	}
+	.info-img>img{
+		width: 60px;
 	}
 }
